# Janky-SDVX-Controller

./: README.md
Leonardo Firmware/: README.md
Leonardo Firmware/Janky-SDVX-Controller/: Janky-SDVX-Controller.cpp  Janky-SDVX-Controller.h  Janky-SDVX-Controller.ino
Models/: Case (INCOMPLETE).f3d  Case (INCOMPLETE).stl  Case Top (14.4mm Switch Holes).f3d  Case Top (14.4mm Switch Holes).stl  Case Top (14.4mm).f3d  Case Top (14.4mm).stl  Case Top (14mm Switch Holes).f3d  Case Top (14mm Switch Holes).stl  Case Top (INCOMPLETE).f3d  Case Top (INCOMPLETE).stl  Case.f3d  Case.stl  Knob (22mm).f3d  Knob (22mm).stl  Knob (25mm).f3d  Knob (25mm).stl  Switch Tolerance Test (14.4mm).stl  Switch Tolerance Test (14.4mm, 1.3mm).f3d  Switch Tolerance Test (14mm).stl  Switch Tolerance Test (14mm, 1.3mm).f3d
Models/F3D/: Case (15mm Thickness).f3d  Case (30mm Thickness).f3d  Case Top (14.4mm Switch Holes).f3d  Case Top (14mm Switch Holes).f3d  Case.f3d  Knob (22mm).f3d  Knob (25mm).f3d  Switch Tolerance Test (14.4mm Switch Hole).f3d  Switch Tolerance Test (14mm Switch Hole).f3d
Models/STL/: Case (15mm Thickness).stl  Case (30mm Thickness).stl  Case Top (14.4mm Switch Holes).stl  Case Top (14mm Switch Holes).stl  Case.stl  Knob (22mm).stl
Pico Firmware/: CMakeLists.txt  Janky-SDVX-Controller.uf2  README.md
Pico Firmware/src/: CMakeLists.txt  Janky-SDVX-Controller.c  controller_config.h  pico_game_controller.c  types.h  usb_descriptors.c  usb_descriptors.h
Pico Firmware/src/debounce/: debounce_include.h
Unsupported Board Firmware/: README.md  Start.bat
(+2 files in other folders)
